About: A p5.js tropical cyclone simulation game

v20190531b:
    * Season summary timelines now use Greek letters for storms with Greek letter names
v20190531a:
    + Added season summary timelines
        > Accessible by clicking "Show Timeline" in the info panel
v20190526a:
    + Added spawning of subtropical depressions and storms in god mode
        > Shift+D and click for subtropical depressions
        > Shift+S and click for subtropical storms
        > Pardon me mobile users; I'll add an alternative spawning method eventually
v20190525a:
    * Changed how natural storm system spawning works
        > Systems (both extratropical and tropical waves) can now spawn at any longitude
        > Extratropical systems spawn along the jetstream
        > Tropical waves still have a 20% tendency to spawn at the eastern edge
        > Tropical waves no longer spawn nearly as often during off-season
        > Systems in general spawn more frequently
    * Rotating a mobile device between portrait and landscape now toggles fullscreen mode (?)
    * Storms slightly less impacted by land interaction (still needs work)
v20190518a:
    + Added button in new basin settings menu to control if god mode (user able to spawn storms) is enabled/disabled
        > Previously always enabled by default, but now the default setting for new basins is disabled
    * Cleaned up Basin constructor code to better accomodate new options
v20190517a:
    * Fixed major crash bug from v20190516a
v20190516a:
    * Made some miscellaneous functions methods of Basin for cleaner code
v20190508a:
    + Added Central Inland Sea map type
v20190506a:
    + Added setting for number of annual snow layers (at most 50), including disabling snow altogether
    * Fullscreen mode now matches your screen resolution, offering Cyclone Simulator in high-definition
        > Warning: Snow can take a long time to render in fullscreen mode, so a low snow layer number or disabling snow is recommended
v20190424a: